--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>JavaScript Calculator</title>
+    <style>
+      body {
+        margin: 1em;
+        font-size: 18px;
+        font-family: Monospace;
+      }
+
+      h1 {
+        font-size: 1.2em;
+      }
+
+      .result {
+        font-weight: bold;
+      }
+
+      input {
+        width: 3em;
+        font-size: 18px;
+        font-family: Monospace;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Calculator</h1>
+    <p id="addition"><input type="number" class="a" value="3" /> + <input type="number" class="b" value="5" /> = <span class="result"></span></p>
+    <p id="subtraction"><input type="number" class="a" value="17" /> - <input type="number" class="b" value="9" /> = <span class="result"></span></p>
+    <script src="calculations.js"></script>
+    <script src="addition.js"></script>
+    <script src="subtraction.js"></script>
+  </body>
+</html>
