--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         font-family: Monospace;
       }
 
-      h1 {
+      h2 {
         font-size: 1.2em;
       }
 
@@ -26,7 +26,7 @@
     </style>
   </head>
   <body>
-    <h1>Calculator</h1>
+    <h2>Calculator</2>
     <p id="addition"><input type="number" class="a" value="3" /> + <input type="number" class="b" value="5" /> = <span class="result"></span></p>
     <p id="subtraction"><input type="number" class="a" value="17" /> - <input type="number" class="b" value="9" /> = <span class="result"></span></p>
     <script src="calculations.js"></script>
