--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>JavaScript Calculator</title>
     <style>
       body {
@@ -26,11 +26,19 @@
     </style>
   </head>
   <body>
-    <h2>Calculator</2>
-    <p id="addition"><input type="number" class="a" value="3" /> + <input type="number" class="b" value="5" /> = <span class="result"></span></p>
-    <p id="subtraction"><input type="number" class="a" value="17" /> - <input type="number" class="b" value="9" /> = <span class="result"></span></p>
+    <h2>Calculator</h2>
+    <p id="addition">
+      <input type="number" class="a" value="3" /> +
+      <input type="number" class="b" value="5" /> = <span class="result"></span>
+    </p>
+
+    <p id="subtraction">
+      <input type="number" class="a" value="17" /> -
+      <input type="number" class="b" value="9" /> = <span class="result"></span>
+    </p>
     <script src="calculations.js"></script>
     <script src="addition.js"></script>
     <script src="subtraction.js"></script>
+<h1> sa mère la reine des putes wola c'est trop et c'est on long texte lànon ? </h1>
   </body>
 </html>
